--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -145,7 +145,7 @@
     <!-- Подвал сайта -->
     <footer>
       <div>
-        <a href="./index.html">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <address>
          <p> г. Киев, пр-т Леси Украинки, 26 </p>
          <a href="mailto:info@example.com ">info@example.com </a> <br>
