--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+380961111111</a></li>
-
       </ul>
     </header>
     <!-- Основной контент -->
@@ -107,7 +106,7 @@
               height="260"
             />
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -117,7 +116,7 @@
               height="260"
             />
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -127,7 +126,7 @@
               height="260"
             />
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -137,7 +136,7 @@
               height="260"
             />
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -147,9 +146,9 @@
       <div>
         <a lang="en" href="./index.html">WebStudio</a>
         <address>
-         <p> г. Киев, пр-т Леси Украинки, 26 </p>
-         <a href="mailto:info@example.com ">info@example.com </a> <br>
-         <a href="tel:+380991111111">+38 099 111 11 11</a> 
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com ">info@example.com </a> <br />
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
       </div>
     </footer>
