Сделан html portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,37 @@
       </ul>
     </header>
 
+<main>
+<!-- наши проекты -->
+<section>
+<h1 hidden>Наши проекты</h1>
+<nav>
+<button type="button">Все</button>
+<button type="button">Веб-сайт</button>
+<button type="button">Приложения</button>
+<button type="button">Дизайн</button>
+<button type="button">Маркетинг</button>
+</nav>
+<ul>
+  <li><a href=""><img src="./images/portfolio/img.jpg" alt="ноутбук"><h2>Технокряк</h2><p>Вебсайт</p></a></li>
+   <li><a href=""><img src="./images/portfolio/img (1).jpg" alt="два баскетболиста"><h2>Постер New Orlean vs Golden Star</h2><p>Дизайн</p></a></li>
+    <li><a href=""><img src="./images/portfolio/img (2).jpg" alt="лого ресторана"><h2>Ресторан Seafood</h2><p>Приложение</p></a></li>
+     <li><a href=""><img src="./images/portfolio/img (3).jpg" alt="наушники"><h2>Проект Prime</h2><p>Маркетинг</p></a></li>
+      <li><a href=""><img src="./images/portfolio/img (4).jpg" alt="две коробки"><h2>Проект Boxes</h2><p>Приложение</p></a></li>
+       <li><a href=""><img src="./images/portfolio/img (5).jpg" alt="монитор"><h2>Inspiration has no Borders</h2><p>Веб-сайт</p></a></li>
+        <li><a href=""><img src="./images/portfolio/img (6).jpg" alt="журнал"><h2>Издание Limited Edition</h2><p>Дизайн</p></a></li>
+         <li><a href=""><img src="./images/portfolio/img (7).jpg" alt="лабел"><h2>Проект LAB</h2><p>Маркетинг</p></a></li>
+          <li><a href=""><img src="./images/portfolio/img (8).jpg" alt="работа на ноутбуке"><h2>Growing Business</h2><p>Приложение</p></a></li>
+</ul>
+
+</section>
+
+
+
+
+</main>
+
+
 <footer>
       <div>
         <a lang="en" href="./index.html">WebStudio</a>
@@ -34,10 +65,6 @@
         </address>
       </div>
     </footer>
-<main>
-
-</main>
-
 
 
 </body>
