--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -71,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="./images/1.jpg"
+              src="./images/webstudio/1.jpg"
               alt="планшет с написанным на нем кодом"
               width="370"
               height="294"
@@ -79,7 +80,7 @@
           </li>
           <li>
             <img
-              src="./images/2.jpg"
+              src="./images/webstudio/2.jpg"
               alt="работа на ноутбуке"
               width="370"
               height="294"
@@ -87,7 +88,7 @@
           </li>
           <li>
             <img
-              src="./images/3.jpg"
+              src="./images/webstudio/3.jpg"
               alt="цветной шестигранник на планшете"
               width="370"
               height="294"
@@ -101,7 +102,7 @@
         <ul>
           <li>
             <img
-              src="./images/4.jpg"
+              src="./images/webstudio/4.jpg"
               alt="работник компании в красной рубашке"
               width="270"
               height="260"
@@ -111,7 +112,7 @@
           </li>
           <li>
             <img
-              src="./images/5.jpg"
+              src="./images/webstudio/5.jpg"
               alt="работник комапании девушка блондинка"
               width="270"
               height="260"
@@ -121,7 +122,7 @@
           </li>
           <li>
             <img
-              src="./images/6.jpg"
+              src="./images/webstudio/6.jpg"
               alt="работник комапании в синей рубашке"
               width="270"
               height="260"
@@ -131,7 +132,7 @@
           </li>
           <li>
             <img
-              src="./images/7.jpg"
+              src="./images/webstudio/7.jpg"
               alt="работник комапании в черной футболке"
               width="270"
               height="260"
