сделан Header и секции герой,приемущества сайта и чем мы занимаемся

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -41,7 +46,7 @@
             <a href=""
               ><img
                 src="./images/portfolio/img.jpg"
-                alt=" ноутбук"
+                alt="ноутбук"
                 width="370"
                 height="294"
               />
@@ -52,7 +57,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (1).jpg"
+                src="./images/portfolio/img(1).jpg"
                 alt="два баскетболиста"
                 width="370"
                 height="294"
@@ -64,7 +69,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (2).jpg"
+                src="./images/portfolio/img(2).jpg"
                 alt="лого ресторана"
                 width="370"
                 height="294"
@@ -76,7 +81,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (3).jpg"
+                src="./images/portfolio/img(3).jpg"
                 alt="наушники"
                 width="370"
                 height="294"
@@ -88,7 +93,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (4).jpg"
+                src="./images/portfolio/img(4).jpg"
                 alt="две коробки"
                 width="370"
                 height="294"
@@ -100,7 +105,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (5).jpg"
+                src="./images/portfolio/img(5).jpg"
                 alt="монитор"
                 width="370"
                 height="294"
@@ -112,7 +117,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (6).jpg"
+                src="./images/portfolio/img(6).jpg"
                 alt="журнал"
                 width="370"
                 height="294"
@@ -124,7 +129,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (7).jpg"
+                src="./images/portfolio/img(7).jpg"
                 alt="лабел"
                 width="370"
                 height="294"
@@ -136,7 +141,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/portfolio/img (8).jpg"
+                src="./images/portfolio/img(8).jpg"
                 alt="работа на ноутбуке"
                 width="370"
                 height="294"
