--- a/index.html
+++ b/index.html
@@ -5,61 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
     <header>
-      <nav>
-        <a lang="en" href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="nav-header">
+        <a lang="en" href="./index.html" class="logo"
+          >Web <span class="logo-secondary">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li><a href="" class="nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+          <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="header-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-link">+380961111111</a>
+        </li>
       </ul>
     </header>
     <!-- Основной контент -->
 
     <main>
       <!-- Герой -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="primary-button">Заказать услугу</button>
       </section>
 
       <!-- Приемущества сайта -->
-      <div>
-        <ul>
+      <div class="main-sextion">
+        <ul class="main-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="main-title">Внимание к деталям</h3>
+            <p class="main-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="main-title">Пунктуальность</h3>
+            <p class="main-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="main-title">Планирование</h3>
+            <p class="main-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="main-title">Современные технологии</h3>
+            <p class="main-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -67,12 +80,12 @@
         </ul>
       </div>
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="work-section">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="work-list">
           <li>
             <img
-              src="./images/webstudio/1.jpg"
+              src="./images/webstudio/nout.jpg"
               alt="планшет с написанным на нем кодом"
               width="370"
               height="294"
@@ -80,7 +93,7 @@
           </li>
           <li>
             <img
-              src="./images/webstudio/2.jpg"
+              src="./images/webstudio/mobile.jpg"
               alt="работа на ноутбуке"
               width="370"
               height="294"
@@ -88,7 +101,7 @@
           </li>
           <li>
             <img
-              src="./images/webstudio/3.jpg"
+              src="./images/webstudio/cube.jpg"
               alt="цветной шестигранник на планшете"
               width="370"
               height="294"
@@ -102,7 +115,7 @@
         <ul>
           <li>
             <img
-              src="./images/webstudio/4.jpg"
+              src="./images/webstudio/red.jpg"
               alt="работник компании в красной рубашке"
               width="270"
               height="260"
@@ -112,7 +125,7 @@
           </li>
           <li>
             <img
-              src="./images/webstudio/5.jpg"
+              src="./images/webstudio/blond.jpg"
               alt="работник комапании девушка блондинка"
               width="270"
               height="260"
@@ -122,7 +135,7 @@
           </li>
           <li>
             <img
-              src="./images/webstudio/6.jpg"
+              src="./images/webstudio/white.jpg"
               alt="работник комапании в синей рубашке"
               width="270"
               height="260"
@@ -132,7 +145,7 @@
           </li>
           <li>
             <img
-              src="./images/webstudio/7.jpg"
+              src="./images/webstudio/black.jpg"
               alt="работник комапании в черной футболке"
               width="270"
               height="260"
