--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         </ul>
       </section>
       <!-- Команда работников -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img
               src="./images/webstudio/red.jpg"
@@ -120,8 +120,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p lang="en" class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -130,8 +130,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p lang="en" class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -140,8 +140,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p lang="en" class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -150,8 +150,8 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p lang="en" class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
