--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header>
       <nav class="nav-header">
         <a lang="en" href="./index.html" class="logo"
-          >Web <span class="logo-secondary">Studio</span></a
+          >Web<span class="logo-secondary">Studio</span></a
         >
-        <ul class="nav-list">
-          <li><a href="" class="nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-          <li><a href="" class="nav-link">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="header-list">
@@ -158,12 +158,17 @@
     </main>
     <!-- Подвал сайта -->
     <footer>
-      <div>
-        <a lang="en" href="./index.html">WebStudio</a>
+      <div class="footer">
+        <a lang="en" href="./index.html" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
         <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com ">info@example.com </a> <br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com " class="footer-link"
+            >info@example.com
+          </a>
+          <br />
+          <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
         </address>
       </div>
     </footer>
