--- a/portfolio.html
+++ b/portfolio.html
@@ -16,138 +16,146 @@
   <body>
     <!-- Шапка -->
     <header>
-      <nav>
-        <a lang="en" href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="nav-header">
+        <a lang="en" href="./index.html" class="logo"
+          >Web<span class="logo-secondary">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="header-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-link">+380961111111</a>
+        </li>
       </ul>
     </header>
 
     <main>
       <!-- наши проекты -->
-      <section>
-        <h1 hidden>Наши проекты</h1>
-        <nav>
-          <button type="button">Все</button>
-          <button type="button">Веб-сайт</button>
-          <button type="button">Приложения</button>
-          <button type="button">Дизайн</button>
-          <button type="button">Маркетинг</button>
+      <section class="projects">
+        <h1 hidden class="projects-title">Наши проекты</h1>
+        <nav class="projects-nav">
+          <button type="button" class="secondary-button">Все</button>
+          <button type="button" class="secondary-button">Веб-сайт</button>
+          <button type="button" class="secondary-button">Приложения</button>
+          <button type="button" class="secondary-button">Дизайн</button>
+          <button type="button" class="secondary-button">Маркетинг</button>
         </nav>
-        <ul>
+        <ul class="projects-list">
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img.jpg"
                 alt="ноутбук"
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
-              <p>Вебсайт</p></a
+              <h2 class="projects-title">Технокряк</h2>
+              <p class="projects-text">Вебсайт</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(1).jpg"
                 alt="два баскетболиста"
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p></a
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-text">Дизайн</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(2).jpg"
                 alt="лого ресторана"
                 width="370"
                 height="294"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p></a
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-text">Приложение</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(3).jpg"
                 alt="наушники"
                 width="370"
                 height="294"
               />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p></a
+              <h2 class="projects-title">Проект Prime</h2>
+              <p class="projects-text">Маркетинг</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(4).jpg"
                 alt="две коробки"
                 width="370"
                 height="294"
               />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p></a
+              <h2 class="projects-title">Проект Boxes</h2>
+              <p class="projects-text">Приложение</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(5).jpg"
                 alt="монитор"
                 width="370"
                 height="294"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p></a
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p class="projects-text">Веб-сайт</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(6).jpg"
                 alt="журнал"
                 width="370"
                 height="294"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p></a
+              <h2 class="projects-title">Издание Limited Edition</h2>
+              <p class="projects-text">Дизайн</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(7).jpg"
                 alt="лабел"
                 width="370"
                 height="294"
               />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p></a
+              <h2 class="projects-title">Проект LAB</h2>
+              <p class="projects-text">Маркетинг</p></a
             >
           </li>
           <li>
-            <a href=""
+            <a href="" class="projects-link"
               ><img
                 src="./images/portfolio/img(8).jpg"
                 alt="работа на ноутбуке"
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p></a
+              <h2 class="projects-title">Growing Business</h2>
+              <p class="projects-text">Приложение</p></a
             >
           </li>
         </ul>
@@ -155,12 +163,17 @@
     </main>
 
     <footer>
-      <div>
-        <a lang="en" href="./index.html">WebStudio</a>
+      <div class="footer">
+        <a lang="en" href="./index.html" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
         <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com ">info@example.com </a> <br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com " class="footer-link"
+            >info@example.com
+          </a>
+          <br />
+          <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
         </address>
       </div>
     </footer>
