Переделан первый список в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,23 @@
       <!-- наши проекты -->
       <section class="projects">
         <h1 hidden class="projects-title">Наши проекты</h1>
-        <nav class="projects-nav">
-          <button type="button" class="secondary-button">Все</button>
-          <button type="button" class="secondary-button">Веб-сайт</button>
-          <button type="button" class="secondary-button">Приложения</button>
-          <button type="button" class="secondary-button">Дизайн</button>
-          <button type="button" class="secondary-button">Маркетинг</button>
-        </nav>
+
+        <ul class="projects-buttons">
+          <li ><button type="button" class="secondary-button">Все</button></li>
+          <li>
+            <button type="button" class="secondary-button">Веб-сайт</button>
+          </li>
+          <li>
+            <button type="button" class="secondary-button">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="secondary-button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="secondary-button">Маркетинг</button>
+          </li>
+        </ul>
+
         <ul class="projects-list">
           <li>
             <a href="" class="projects-link"
