--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list">
-          <li>
+          <li class="worker">
             <img
               src="./images/webstudio/red.jpg"
               alt="работник компании в красной рубашке"
@@ -123,9 +123,9 @@
             <h3 class="team-name">Игорь Демьяненко</h3>
             <p lang="en" class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="worker">
             <img
-              src="./images/webstudio/blond.jpg"
+              src="./images/webstudio/blond.jpg" 
               alt="работник комапании девушка блондинка"
               width="270"
               height="260"
@@ -133,7 +133,7 @@
             <h3 class="team-name">Ольга Репина</h3>
             <p lang="en" class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="worker">
             <img
               src="./images/webstudio/white.jpg"
               alt="работник комапании в синей рубашке"
@@ -143,7 +143,7 @@
             <h3 class="team-name">Николай Тарасов</h3>
             <p lang="en" class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="worker">
             <img
               src="./images/webstudio/black.jpg"
               alt="работник комапании в черной футболке"
